fix: remove overflow from layout

--- a/src/core/components/layout/layout.module.css
+++ b/src/core/components/layout/layout.module.css
@@ -3,7 +3,6 @@
     max-width: 100%;
     padding-bottom: var(--spacing-4);
     padding-inline: var(--spacing-4);
-    overflow: auto;
     position: relative;
     width: 640px;
 }
